--- a/Admin-Dashboard/package.json
+++ b/Admin-Dashboard/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@iconscout/react-unicons": "^2.2.5",
+    "@mui/material": "^7.3.4",
     "framer-motion": "^12.23.24",
     "react": "^19.1.1",
     "react-apexcharts": "^1.8.0",
